--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url(../img/Sin-título-1.png);
+    background-image: url(background.png);
     background-position: absolute;
     background-size: 100%;
     background-repeat: no-repeat;
